infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' # to use regex in routing path
  labels:
    name: ingress-service
spec:
  rules:
  - host: ticketapp.com
    http:
      paths:
      - pathType: Prefix
        path: "/api/users/?(.*)"
        backend:
          service:
            name: ticket-auth-service
            port: 
              number: 3000
